fixed bug. save and cancel buttons now change positions on smaller screen sizes

--- a/client/src/components/Notes/Notes.css
+++ b/client/src/components/Notes/Notes.css
@@ -69,7 +69,9 @@
     width: 0px;
 }
 
-
+.addNoteBtnsMobile {
+    display: none;
+}
 
 /*--- Individual Cards ---*/
 .cardContainer {
@@ -140,6 +142,20 @@
 }
 
 @media screen and (max-width: 415px) {
+    .title {
+        width: 100%;
+    }
+
+    .addNoteBtns {
+        display: none;
+    }
+
+    .addNoteBtnsMobile {
+        display: block;
+        margin-top: 6px;
+        text-align: right;
+    }
+
     .noteCard {
         padding: 0px 10px;
     }
